# ME_557_Robot

./: .gitignore  README.md  individualMove.ino  test_urdf.py
Robot Assembly.SLDASM/config/: joint_names_Robot Assembly.SLDASM.yaml
Robot Assembly.SLDASM/meshes/: Link1.STL  Link2_L.STL  Link4.STL  Link5.STL  base_link.STL
Robot Assembly.SLDASM/urdf/: Robot Assembly.SLDASM.csv  Robot Assembly.SLDASM.urdf
arduino/: README.md  arduino-cli.yaml
arduino/me557_pen_arduino_ws/: ace_trajectory_data.h  me557_pen_arduino_ws.ino
live/: README.md
offline/: README.md
offline/arduino/: README.md
offline/tools/: compute_moveit_calibration.py  export_moveit_joint_trajectory.py  export_offline_ace.sh  generate_offline_ace_ik_trajectory.py
online/: README.md  launch_rviz.sh  letterCoordinateMaker.py  letterCoordinates.json  trigger_write.sh
online/robotMovements/: moveItData.h  robotMovements.ino  trajectory_data.h
online/src/me557_pen_description/: package.xml  setup.cfg  setup.py
online/src/me557_pen_description/config/: me557_pen_params.yaml
online/src/me557_pen_description/launch/: view_me557_pen.launch.py
online/src/me557_pen_description/me557_pen_description/: write_ace.py  write_on_board.py
online/src/me557_pen_description/urdf/: Robot Assembly.SLDASM.urdf  me557_pen.urdf.xacro
online/src/me557_pen_moveit_config/: package.xml
online/src/me557_pen_moveit_config/config/: kinematics.yaml  moveit.rviz  write_ace_online.yaml  write_on_board.yaml
online/src/me557_pen_moveit_config/launch/: demo.launch.py  write_ace_online.launch.py  write_on_board.launch.py
online/tools/: export_moveit_dynamic.py
onlineWeights/: README.md  launch_rviz.sh  letterCoordinateMaker.py  letterCoordinates.json  trigger_write.sh
onlineWeights/robotMovements/: ik_points.h  moveItData.h  robotMovements.ino  trajectory_data.h
onlineWeights/saved_paths/: ACE_mid.json
onlineWeights/tools/: export_moveit_dynamic.py  generate_ik_points.py
simple_robot_v1/: CMakeLists.txt  package.xml
simple_robot_v1/launch/: display.launch  gazebo.launch
simple_robot_v1/meshes/: ElbowLink.STL  PenLink.STL  PenTipLink.STL  RotatingBaseLink.STL  ShoulderLink.STL  WristLink.STL
simple_robot_v2/: CMakeLists.txt  package.xml
simple_with_weights_v1/: CMakeLists.txt  package.xml
tools/: export_moveit_joint_trajectory.py  export_offline_ace.sh  generate_offline_ace_ik_trajectory.py
(+77 files in other folders)
