<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>me557_pen_description</name>
  <version>0.0.1</version>
  <description>ME557 pen description package containing URDF/xacro, meshes, and RViz configuration.</description>
  <maintainer email="oteya@todo.todo">oteya</maintainer>
  <license>TODO: License declaration</license>

  <!-- Runtime dependencies for visualization -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>pymoveit2</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
