<?xml version="1.0"?>
<package format="3">
  <name>me557_pen_moveit_config</name>
  <version>0.0.1</version>
  <description>Manual MoveIt configuration for me557_pen.</description>
  <maintainer email="oteya@todo.todo">oteya</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>me557_pen_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
